Added notification and http plugins, Added pty host library, You also get a notification when a command is ran using the pty host